# rag-langchain

./: .env  .gitignore  README.md  pyproject.toml
backend/: indexing.py  querying.py
sample_data/: document_ai.txt  document_climate.txt  document_history.txt
